src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Census_Date__c</fullName>
        <label>Census Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <description>The following field identifies the external link to where the associated registration contract is located</description>
        <label>Contract Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Enrolments__c</fullName>
        <label>Estimated Enrolments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Fee_Band__c</fullName>
        <label>License Fee Band</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Fee__c</fullName>
        <label>License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The following field identifies which Opportunity this contract relates to</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The following field identifies the name of the sponsor which signed the contract (i.e. Self-sponsor or other)</description>
        <label>Sponsor Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Sponsor Signed By)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Signed_Date__c</fullName>
        <description>The following date corresponds to when the sponsor has signed the associated contract</description>
        <label>Sponsor Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>My_Registrations</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Registrations</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>